updated index.html for url path

--- a/public/index.html
+++ b/public/index.html
@@ -580,7 +580,7 @@
           };
       
           try {
-            const response = await fetch("https://aithinkglobal-690024473862.northamerica-northeast1.run.app//api/send-email", {
+            const response = await fetch("https://aithinkglobal-690024473862.northamerica-northeast1.run.app/api/send-email", {
               method: "POST",
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify(formData)
